Command-+ zoom on a frameset page fails to resize the frames, only resizes their content

https://bugs.webkit.org/show_bug.cgi?id=64883

Reviewed by NOBODY (OOPS!).

This patch aligns WebKit with Blink / Chromium and Gecko / Firefox.

The original patch was authored by Uday Kiran.

This patch changes our frameset code to take the page zoom factor into account while computing
the width and/or height of frames with pixel size values. This allows pages
using frames to layout correctly even after user page zoom.

Cherry-Pick Tests: https://chromium.googlesource.com/chromium/src.git/+/9c7ef525d830b014626d787f3060512c2d3251a2

* Source/WebCore/rendering/RenderFrameSet.cpp:
(RenderFrameSet::layOutAxis): As above
* LayoutTests/fast/frames/frame-set-zoom.html: Add Test Case
* LayoutTests/fast/frames/frame-set-zoom-expected.html: Add Test Case Expectation